unpackaged/main/default/objects/genesis__Amortization_Schedule__c/genesis__Amortization_Schedule__c.object-meta.xml
<CustomObject>
    <description>Amortization schedule is also called as Repayment schedule.</description>
    <label>Amortization_Schedule</label>
    <nameField>
        <displayFormat>AMZ-{0000000000}</displayFormat>
        <label>Amortization Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortization_Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>