unpackaged/main/default/objects/genesis__Amortization_Schedule__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Amortization_Schedule</relationshipLabel>
    <relationshipName>Amortization_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>