unpackaged/main/default/objects/genesis__Amortization_Schedule__c/fields/genesis__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Due_Date__c</fullName>
    <description>Due date</description>
    <inlineHelpText>The date on which the loan payment is due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>