unpackaged/main/default/objects/genesis__Amortization_Schedule__c/fields/genesis__Due_Principal__c.field-meta.xml
<CustomField>
    <fullName>genesis__Due_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Principal</description>
    <inlineHelpText>Due Principal</inlineHelpText>
    <label>Due Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>