unpackaged/main/default/objects/genesis__Amortization_Schedule__c/fields/genesis__Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>