unpackaged/main/default/objects/genesis__Amortization_Schedule__c/fields/genesis__Total_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Due_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Due Amount</description>
    <inlineHelpText>Total Due Amount</inlineHelpText>
    <label>Total Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>